--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.9)
 project(letter_counter C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(letter_counter main.c)
+
+add_executable(letter_counter letters.h letters.c main.c )
